--- a/Makefile.in
+++ b/Makefile.in
@@ -100,13 +100,14 @@ am__objects_1 = ./lib/conf_def.$(OBJEXT) ./lib/conf_meas.$(OBJEXT) \
 	./lib/conf_upd.$(OBJEXT)
 am__objects_2 = ./lib/dSFMT.$(OBJEXT)
 am__objects_3 = ./lib/endianness.$(OBJEXT)
-am__objects_4 = ./lib/geometry.$(OBJEXT)
-am__objects_5 = ./lib/gparam.$(OBJEXT)
-am__objects_6 = ./lib/random.$(OBJEXT)
-am__objects_7 = ./lib/vec.$(OBJEXT)
+am__objects_4 = ./lib/flavour_matrix.$(OBJEXT)
+am__objects_5 = ./lib/geometry.$(OBJEXT)
+am__objects_6 = ./lib/gparam.$(OBJEXT)
+am__objects_7 = ./lib/random.$(OBJEXT)
+am__objects_8 = ./lib/vec.$(OBJEXT)
 am_rpn_OBJECTS = ./src/rpn.$(OBJEXT) $(am__objects_1) $(am__objects_2) \
 	$(am__objects_3) $(am__objects_4) $(am__objects_5) \
-	$(am__objects_6) $(am__objects_7)
+	$(am__objects_6) $(am__objects_7) $(am__objects_8)
 rpn_OBJECTS = $(am_rpn_OBJECTS)
 rpn_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
@@ -215,7 +216,7 @@ LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
-N_c = @N_c@
+N_f = @N_f@
 Num_threads = @Num_threads@
 OBJEXT = @OBJEXT@
 OPENMP_CFLAGS = @OPENMP_CFLAGS@
@@ -292,9 +293,9 @@ dSFMT = ./include/dSFMT-common.h \
 endian = ./include/endianness.h  \
          ./lib/endianness.c 
 
+flavourmatrix = ./include/flavour_matrix.h \
+                ./lib/flavour_matrix.c
 
-#flavourmatrix = ./include/flavour_matrix.h \
-#                ./lib/flavour_matrix.c
 conf = ./include/conf.h \
        ./lib/conf_def.c \
        ./lib/conf_meas.c \
@@ -306,13 +307,6 @@ geometry = ./include/geometry.h \
 gparam = ./include/gparam.h \
          ./lib/gparam.c
 
-
-#son = ./include/son.h \
-#      ./include/son_monopoles.h \
-#      ./include/son_upd.h \
-#      ./lib/son.c \
-#      ./lib/son_monopoles.c \
-#      ./lib/son_upd.c
 random = ./include/myrngparam.h \
          ./include/random.h \
          ./lib/random.c 
@@ -324,6 +318,7 @@ rpn_SOURCES = ./src/rpn.c \
             $(conf) \
             $(dSFMT) \
             $(endian) \
+            $(flavourmatrix) \
             $(geometry) \
             $(gparam) \
             ./include/macro.h \
@@ -451,6 +446,8 @@ lib/$(DEPDIR)/$(am__dirstamp):
 	lib/$(DEPDIR)/$(am__dirstamp)
 ./lib/endianness.$(OBJEXT): lib/$(am__dirstamp) \
 	lib/$(DEPDIR)/$(am__dirstamp)
+./lib/flavour_matrix.$(OBJEXT): lib/$(am__dirstamp) \
+	lib/$(DEPDIR)/$(am__dirstamp)
 ./lib/geometry.$(OBJEXT): lib/$(am__dirstamp) \
 	lib/$(DEPDIR)/$(am__dirstamp)
 ./lib/gparam.$(OBJEXT): lib/$(am__dirstamp) \
@@ -476,6 +473,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/conf_upd.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/dSFMT.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/endianness.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/flavour_matrix.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/geometry.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/gparam.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lib/$(DEPDIR)/random.Po@am__quote@
